[tool.poetry]
name = "T4Clustering"
version = "0.1.0"
description = "T4C is a framework for time-series clustering as-a-service."
authors = ["Alessandro Falcetta <alessandro.falcetta@polimi.it>", "Manuel Roveri <manuel.roveri@polimi.it>"]
readme = "README.md"

repository = "https://github.com/AlexMV12/T4C"

packages = [{include = "timexseries_clustering"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch = "^1.13.1"
dash = "^2.7.1"
statsmodels = "^0.13.5"
dash-bootstrap-components = "^1.3.0"
networkx = "^3.0"
matplotlib = "^3.6.3"
colorhash = "^1.2.1"
dateparser = "^1.1.6"
llvmlite = "^0.39.1"
tslearn = "^0.5.2"
pywavelets = "^1.4.1"
numpy = "1.23.0"
numba = "0.56.2"
tensorflow = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
